--- a/app/tpls/home/main/statement/chart/chart0.html
+++ b/app/tpls/home/main/statement/chart/chart0.html
@@ -36,8 +36,9 @@
             </div>
             <div class="createBugContent">
                 <div class="describeBox" ng-init="chartShow=true">
-                    <div class="describeTitle" ng-click="chartShow=!chartShow" style="text-align: center;">
-                        运行图表<i class="iconfont icon-unfold"></i>
+                    <div class="describeTitle" ng-click="chartShow=!chartShow" style="cursor: pointer; font-weight: bold;">
+                        <i class="iconfont icon-icon-test" style="margin-right: 5px; color: #008bff;"></i>
+                        运行图表<i class="iconfont icon-unfold-copy1 floatright" style="margin-right: 20px;"></i>
                     </div>
                     <div class="describeContent padding_20" ng-show="chartShow">
                         <div class="chartBox">
