--- a/app/tpls/home/main/statement/chart/chart3.html
+++ b/app/tpls/home/main/statement/chart/chart3.html
@@ -6,10 +6,10 @@
             <div class="createBugContent">
                 <div class="describeBox">
                     <div class="describeTitle">
-                        需求运行明细
+                        缺陷统计报表
                     </div>
                     <div class="describeContent padding_20">
-                        <div ui-grid="gridOptionsChart1" ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
+                        <div ui-grid="gridOptionsChart3" ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
                     </div>
                 </div>
             </div>       
