--- a/app/tpls/home/projectNavStatementChart.html
+++ b/app/tpls/home/projectNavStatementChart.html
@@ -3,19 +3,24 @@
 <div class="projectNav" style="overflow: hidden;" ng-controller="statementCtrl">
     <div class="projectNavList">
         <div class="title">
-            过滤器
-            <span class="chatIconButton floatright treefunicon" data-tip="新建过滤器">
-                <i class="iconfont icon-add"></i>
-            </span>
+            报表总览
         </div>
         <ul class="projectNavListContent">
             <li class="{{projectNavNow==1?'active':''}}" ng-click="chartChange('0')">
                 <i class="iconfont icon-shaixuan i_color6 filterIcon"></i>
-                <span class="filtername">全部用</span>
+                <span class="filtername">自动化运行总览</span>
             </li>
             <li class="{{projectNavNow==2?'active':''}}" ng-click="chartChange('1')">
                 <i class="iconfont icon-shaixuan i_color7 filterIcon"></i>
-                <span class="filtername">我创建的用例</span>
+                <span class="filtername">需求运行明细</span>
+            </li>
+            <li class="{{projectNavNow==2?'active':''}}" ng-click="chartChange('2')">
+                <i class="iconfont icon-shaixuan i_color8 filterIcon"></i>
+                <span class="filtername">执行错误用例</span>
+            </li>
+            <li class="{{projectNavNow==2?'active':''}}" ng-click="chartChange('3')">
+                <i class="iconfont icon-shaixuan i_color5 filterIcon"></i>
+                <span class="filtername">缺陷统计报表</span>
             </li>
         </ul>
     </div>
