--- a/app/tpls/home/topbarProject.html
+++ b/app/tpls/home/topbarProject.html
@@ -2,18 +2,11 @@
 </style>
 <div class="topbar">
 	<div class="floatleft leftMenu">
-		<a class="topbarLink" href="" ui-sref="index.task">AR</a>
+		<a class="topbarLink" href="" ui-sref="index.project">AR</a>
 	</div>
-	<div class="floatright rightMenu">		
-        <div class="dropdownDefault floatleft" dropdown>
-            <a href="" class="topbarLink" dropdown-toggle>项目名称</a>
-            <ul class="dropdown-menu transition" dropdown-menu role="menu">
-            	<span class="triangle"></span>               
-                <li><span>项目1</span></li>
-                <li><span>项目2</span></li>
-                <li><span>项目3</span></li>
-            </ul>
-        </div>
+	<div class="floatright rightMenu">	
+		<a class="topbarLink" href="" ui-sref="equipment">设备管理</a>
+		<a href="" class="topbarLink" ui-sref="index.cross-projectTask">跨项目任务</a>	       
         <div class="dropdownDefault floatleft" dropdown>
             <a href="" class="topbarLink" dropdown-toggle>账户昵称</a>
             <ul class="dropdown-menu transition" dropdown-menu role="menu">
